# crab

./: README.md  pyproject.toml
dst-pcty_crab/: Makefile
dst-pcty_crab/pcty_crab/: __init__.py  evaluation.py
dst-pcty_crab/pcty_crab/base/: legislative_rag.py  mock_llm_agent.py  tfidf_searcher.py
dst-pcty_crab/pcty_crab/resources/: articles.pkl  qa.pkl  reference_dataset.csv  searcher.pkl
dst-pcty_crab/pcty_crab/utils/: constants.py
